lib/thrift_optz/raw_parser.rb
class ThriftOptz::Parser
  # :stopdoc:

    # This is distinct from setup_parser so that a standalone parser
    # can redefine #initialize and still have access to the proper
    # parser setup code.
    def initialize(str, debug=false)
      setup_parser(str, debug)
    end



    # Prepares for parsing +str+.  If you define a custom initialize you must
    # call this method before #parse
    def setup_parser(str, debug=false)
      @string = str
      @pos = 0
      @memoizations = Hash.new { |h,k| h[k] = {} }
      @result = nil
      @failed_rule = nil
      @failing_rule_offset = -1

      setup_foreign_grammar
    end

    attr_reader :string
    attr_reader :failing_rule_offset
    attr_accessor :result, :pos

    
    def current_column(target=pos)
      if c = string.rindex("\n", target-1)
        return target - c - 1
      end

      target + 1
    end

    def current_line(target=pos)
      cur_offset = 0
      cur_line = 0

      string.each_line do |line|
        cur_line += 1
        cur_offset += line.size
        return cur_line if cur_offset >= target
      end

      -1
    end

    def lines
      lines = []
      string.each_line { |l| lines << l }
      lines
    end



    def get_text(start)
      @string[start..@pos-1]
    end

    def show_pos
      width = 10
      if @pos < width
        "#{@pos} (\"#{@string[0,@pos]}\" @ \"#{@string[@pos,width]}\")"
      else
        "#{@pos} (\"... #{@string[@pos - width, width]}\" @ \"#{@string[@pos,width]}\")"
      end
    end

    def failure_info
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        "line #{l}, column #{c}: failed rule '#{info.name}' = '#{info.rendered}'"
      else
        "line #{l}, column #{c}: failed rule '#{@failed_rule}'"
      end
    end

    def failure_caret
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      line = lines[l-1]
      "#{line}\n#{' ' * (c - 1)}^"
    end

    def failure_character
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset
      lines[l-1][c-1, 1]
    end

    def failure_oneline
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      char = lines[l-1][c-1, 1]

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        "@#{l}:#{c} failed rule '#{info.name}', got '#{char}'"
      else
        "@#{l}:#{c} failed rule '#{@failed_rule}', got '#{char}'"
      end
    end

    class ParseError < RuntimeError
    end

    def raise_error
      raise ParseError, failure_oneline
    end

    def show_error(io=STDOUT)
      error_pos = @failing_rule_offset
      line_no = current_line(error_pos)
      col_no = current_column(error_pos)

      io.puts "On line #{line_no}, column #{col_no}:"

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        io.puts "Failed to match '#{info.rendered}' (rule '#{info.name}')"
      else
        io.puts "Failed to match rule '#{@failed_rule}'"
      end

      io.puts "Got: #{string[error_pos,1].inspect}"
      line = lines[line_no-1]
      io.puts "=> #{line}"
      io.print(" " * (col_no + 3))
      io.puts "^"
    end

    def set_failed_rule(name)
      if @pos > @failing_rule_offset
        @failed_rule = name
        @failing_rule_offset = @pos
      end
    end

    attr_reader :failed_rule

    def match_string(str)
      len = str.size
      if @string[pos,len] == str
        @pos += len
        return str
      end

      return nil
    end

    def scan(reg)
      if m = reg.match(@string[@pos..-1])
        width = m.end(0)
        @pos += width
        return true
      end

      return nil
    end

    if "".respond_to? :getbyte
      def get_byte
        if @pos >= @string.size
          return nil
        end

        s = @string.getbyte @pos
        @pos += 1
        s
      end
    else
      def get_byte
        if @pos >= @string.size
          return nil
        end

        s = @string[@pos]
        @pos += 1
        s
      end
    end

    def parse(rule=nil)
      # We invoke the rules indirectly via apply
      # instead of by just calling them as methods because
      # if the rules use left recursion, apply needs to
      # manage that.

      if !rule
        apply(:_root)
      else
        method = rule.gsub("-","_hyphen_")
        apply :"_#{method}"
      end
    end

    class MemoEntry
      def initialize(ans, pos)
        @ans = ans
        @pos = pos
        @result = nil
        @set = false
        @left_rec = false
      end

      attr_reader :ans, :pos, :result, :set
      attr_accessor :left_rec

      def move!(ans, pos, result)
        @ans = ans
        @pos = pos
        @result = result
        @set = true
        @left_rec = false
      end
    end

    def external_invoke(other, rule, *args)
      old_pos = @pos
      old_string = @string

      @pos = other.pos
      @string = other.string

      begin
        if val = __send__(rule, *args)
          other.pos = @pos
          other.result = @result
        else
          other.set_failed_rule "#{self.class}##{rule}"
        end
        val
      ensure
        @pos = old_pos
        @string = old_string
      end
    end

    def apply_with_args(rule, *args)
      memo_key = [rule, args]
      if m = @memoizations[memo_key][@pos]
        @pos = m.pos
        if !m.set
          m.left_rec = true
          return nil
        end

        @result = m.result

        return m.ans
      else
        m = MemoEntry.new(nil, @pos)
        @memoizations[memo_key][@pos] = m
        start_pos = @pos

        ans = __send__ rule, *args

        lr = m.left_rec

        m.move! ans, @pos, @result

        # Don't bother trying to grow the left recursion
        # if it's failing straight away (thus there is no seed)
        if ans and lr
          return grow_lr(rule, args, start_pos, m)
        else
          return ans
        end

        return ans
      end
    end

    def apply(rule)
      if m = @memoizations[rule][@pos]
        @pos = m.pos
        if !m.set
          m.left_rec = true
          return nil
        end

        @result = m.result

        return m.ans
      else
        m = MemoEntry.new(nil, @pos)
        @memoizations[rule][@pos] = m
        start_pos = @pos

        ans = __send__ rule

        lr = m.left_rec

        m.move! ans, @pos, @result

        # Don't bother trying to grow the left recursion
        # if it's failing straight away (thus there is no seed)
        if ans and lr
          return grow_lr(rule, nil, start_pos, m)
        else
          return ans
        end

        return ans
      end
    end

    def grow_lr(rule, args, start_pos, m)
      while true
        @pos = start_pos
        @result = m.result

        if args
          ans = __send__ rule, *args
        else
          ans = __send__ rule
        end
        return nil unless ans

        break if @pos <= m.pos

        m.move! ans, @pos, @result
      end

      @result = m.result
      @pos = m.pos
      return m.ans
    end

    class RuleInfo
      def initialize(name, rendered)
        @name = name
        @rendered = rendered
      end

      attr_reader :name, :rendered
    end

    def self.rule_info(name, rendered)
      RuleInfo.new(name, rendered)
    end


  # :startdoc:
  # :stopdoc:

  module AST
    class Node; end
    class Comment < Node
      def initialize(text)
        @text = text
      end
      attr_reader :text
    end
    class ConstDouble < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class ConstIdentifier < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class ConstInt < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class ConstList < Node
      def initialize(values)
        @values = values
      end
      attr_reader :values
    end
    class ConstMap < Node
      def initialize(values)
        @values = values
      end
      attr_reader :values
    end
    class ConstString < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class Enum < Node
      def initialize(values)
        @values = values
      end
      attr_reader :values
    end
    class Exception < Node
      def initialize(name, fields)
        @name = name
        @fields = fields
      end
      attr_reader :name
      attr_reader :fields
    end
    class Field < Node
      def initialize(index, type, name, value, options)
        @index = index
        @type = type
        @name = name
        @value = value
        @options = options
      end
      attr_reader :index
      attr_reader :type
      attr_reader :name
      attr_reader :value
      attr_reader :options
    end
    class Function < Node
      def initialize(name, return_type, arguments)
        @name = name
        @return_type = return_type
        @arguments = arguments
      end
      attr_reader :name
      attr_reader :return_type
      attr_reader :arguments
    end
    class Include < Node
      def initialize(path)
        @path = path
      end
      attr_reader :path
    end
    class List < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class Map < Node
      def initialize(key, value)
        @key = key
        @value = value
      end
      attr_reader :key
      attr_reader :value
    end
    class Namespace < Node
      def initialize(lang, namespace)
        @lang = lang
        @namespace = namespace
      end
      attr_reader :lang
      attr_reader :namespace
    end
    class Service < Node
      def initialize(name, functions)
        @name = name
        @functions = functions
      end
      attr_reader :name
      attr_reader :functions
    end
    class Set < Node
      def initialize(value)
        @value = value
      end
      attr_reader :value
    end
    class Struct < Node
      def initialize(type, name, fields)
        @type = type
        @name = name
        @fields = fields
      end
      attr_reader :type
      attr_reader :name
      attr_reader :fields
    end
  end
  def comment(text)
    AST::Comment.new(text)
  end
  def const_dbl(value)
    AST::ConstDouble.new(value)
  end
  def const_id(value)
    AST::ConstIdentifier.new(value)
  end
  def const_int(value)
    AST::ConstInt.new(value)
  end
  def const_list(values)
    AST::ConstList.new(values)
  end
  def const_map(values)
    AST::ConstMap.new(values)
  end
  def const_str(value)
    AST::ConstString.new(value)
  end
  def enum(values)
    AST::Enum.new(values)
  end
  def exception(name, fields)
    AST::Exception.new(name, fields)
  end
  def field(index, type, name, value, options)
    AST::Field.new(index, type, name, value, options)
  end
  def function(name, return_type, arguments)
    AST::Function.new(name, return_type, arguments)
  end
  def include(path)
    AST::Include.new(path)
  end
  def list(value)
    AST::List.new(value)
  end
  def map(key, value)
    AST::Map.new(key, value)
  end
  def namespace(lang, namespace)
    AST::Namespace.new(lang, namespace)
  end
  def service(name, functions)
    AST::Service.new(name, functions)
  end
  def set(value)
    AST::Set.new(value)
  end
  def struct(type, name, fields)
    AST::Struct.new(type, name, fields)
  end
  def setup_foreign_grammar; end

  # intconstant = /([+-]?[0-9]+)/
  def _intconstant
    _tmp = scan(/\A(?-mix:([+-]?[0-9]+))/)
    set_failed_rule :_intconstant unless _tmp
    return _tmp
  end

  # hexconstant = /("0x"[0-9A-Fa-f]+)/
  def _hexconstant
    _tmp = scan(/\A(?-mix:("0x"[0-9A-Fa-f]+))/)
    set_failed_rule :_hexconstant unless _tmp
    return _tmp
  end

  # dubconstant = (/([+-]?[0-9]+(\.[0-9]+)([eE][+-]?[0-9]+)?)/ | /([+-]?[0-9]+([eE][+-]?[0-9]+))/ | /([+-]?(\.[0-9]+)([eE][+-]?[0-9]+)?)/)
  def _dubconstant

    _save = self.pos
    while true # choice
      _tmp = scan(/\A(?-mix:([+-]?[0-9]+(\.[0-9]+)([eE][+-]?[0-9]+)?))/)
      break if _tmp
      self.pos = _save
      _tmp = scan(/\A(?-mix:([+-]?[0-9]+([eE][+-]?[0-9]+)))/)
      break if _tmp
      self.pos = _save
      _tmp = scan(/\A(?-mix:([+-]?(\.[0-9]+)([eE][+-]?[0-9]+)?))/)
      break if _tmp
      self.pos = _save
      break
    end # end choice

    set_failed_rule :_dubconstant unless _tmp
    return _tmp
  end

  # identifier = /([a-zA-Z_][\.a-zA-Z_0-9]*)/
  def _identifier
    _tmp = scan(/\A(?-mix:([a-zA-Z_][\.a-zA-Z_0-9]*))/)
    set_failed_rule :_identifier unless _tmp
    return _tmp
  end

  # whitespace = /([ \t\r\n]*)/
  def _whitespace
    _tmp = scan(/\A(?-mix:([ \t\r\n]*))/)
    set_failed_rule :_whitespace unless _tmp
    return _tmp
  end

  # st_identifier = /([a-zA-Z-][\.a-zA-Z_0-9-]*)/
  def _st_identifier
    _tmp = scan(/\A(?-mix:([a-zA-Z-][\.a-zA-Z_0-9-]*))/)
    set_failed_rule :_st_identifier unless _tmp
    return _tmp
  end

  # literal_begin = /(['\"])/
  def _literal_begin
    _tmp = scan(/\A(?-mix:(['\"]))/)
    set_failed_rule :_literal_begin unless _tmp
    return _tmp
  end

  # reserved = ("BEGIN" | "END" | "__CLASS__" | "__DIR__" | "__FILE__" | "__FUNCTION__" | "__LINE__" | "__METHOD__" | "__NAMESPACE__" | "abstract" | "alias" | "and" | "args" | "as" | "assert" | "begin" | "break" | "case" | "catch" | "class" | "clone" | "continue" | "declare" | "def" | "default" | "del" | "delete" | "do" | "dynamic" | "elif" | "else" | "elseif" | "elsif" | "end" | "enddeclare" | "endfor" | "endforeach" | "endif" | "endswitch" | "endwhile" | "ensure" | "except" | "exec" | "finally" | "float" | "for" | "foreach" | "function" | "global" | "goto" | "if" | "implements" | "import" | "in" | "inline" | "instanceof" | "interface" | "is" | "lambda" | "module" | "native" | "new" | "next" | "nil" | "not" | "or" | "pass" | "public" | "print" | "private" | "protected" | "public" | "raise" | "redo" | "rescue" | "retry" | "register" | "return" | "self" | "sizeof" | "static" | "super" | "switch" | "synchronized" | "then" | "this" | "throw" | "transient" | "try" | "undef" | "union" | "unless" | "unsigned" | "until" | "use" | "var" | "virtual" | "volatile" | "when" | "while" | "with" | "xor" | "yield")
  def _reserved

    _save = self.pos
    while true # choice
      _tmp = match_string("BEGIN")
      break if _tmp
      self.pos = _save
      _tmp = match_string("END")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__CLASS__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__DIR__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__FILE__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__FUNCTION__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__LINE__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__METHOD__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("__NAMESPACE__")
      break if _tmp
      self.pos = _save
      _tmp = match_string("abstract")
      break if _tmp
      self.pos = _save
      _tmp = match_string("alias")
      break if _tmp
      self.pos = _save
      _tmp = match_string("and")
      break if _tmp
      self.pos = _save
      _tmp = match_string("args")
      break if _tmp
      self.pos = _save
      _tmp = match_string("as")
      break if _tmp
      self.pos = _save
      _tmp = match_string("assert")
      break if _tmp
      self.pos = _save
      _tmp = match_string("begin")
      break if _tmp
      self.pos = _save
      _tmp = match_string("break")
      break if _tmp
      self.pos = _save
      _tmp = match_string("case")
      break if _tmp
      self.pos = _save
      _tmp = match_string("catch")
      break if _tmp
      self.pos = _save
      _tmp = match_string("class")
      break if _tmp
      self.pos = _save
      _tmp = match_string("clone")
      break if _tmp
      self.pos = _save
      _tmp = match_string("continue")
      break if _tmp
      self.pos = _save
      _tmp = match_string("declare")
      break if _tmp
      self.pos = _save
      _tmp = match_string("def")
      break if _tmp
      self.pos = _save
      _tmp = match_string("default")
      break if _tmp
      self.pos = _save
      _tmp = match_string("del")
      break if _tmp
      self.pos = _save
      _tmp = match_string("delete")
      break if _tmp
      self.pos = _save
      _tmp = match_string("do")
      break if _tmp
      self.pos = _save
      _tmp = match_string("dynamic")
      break if _tmp
      self.pos = _save
      _tmp = match_string("elif")
      break if _tmp
      self.pos = _save
      _tmp = match_string("else")
      break if _tmp
      self.pos = _save
      _tmp = match_string("elseif")
      break if _tmp
      self.pos = _save
      _tmp = match_string("elsif")
      break if _tmp
      self.pos = _save
      _tmp = match_string("end")
      break if _tmp
      self.pos = _save
      _tmp = match_string("enddeclare")
      break if _tmp
      self.pos = _save
      _tmp = match_string("endfor")
      break if _tmp
      self.pos = _save
      _tmp = match_string("endforeach")
      break if _tmp
      self.pos = _save
      _tmp = match_string("endif")
      break if _tmp
      self.pos = _save
      _tmp = match_string("endswitch")
      break if _tmp
      self.pos = _save
      _tmp = match_string("endwhile")
      break if _tmp
      self.pos = _save
      _tmp = match_string("ensure")
      break if _tmp
      self.pos = _save
      _tmp = match_string("except")
      break if _tmp
      self.pos = _save
      _tmp = match_string("exec")
      break if _tmp
      self.pos = _save
      _tmp = match_string("finally")
      break if _tmp
      self.pos = _save
      _tmp = match_string("float")
      break if _tmp
      self.pos = _save
      _tmp = match_string("for")
      break if _tmp
      self.pos = _save
      _tmp = match_string("foreach")
      break if _tmp
      self.pos = _save
      _tmp = match_string("function")
      break if _tmp
      self.pos = _save
      _tmp = match_string("global")
      break if _tmp
      self.pos = _save
      _tmp = match_string("goto")
      break if _tmp
      self.pos = _save
      _tmp = match_string("if")
      break if _tmp
      self.pos = _save
      _tmp = match_string("implements")
      break if _tmp
      self.pos = _save
      _tmp = match_string("import")
      break if _tmp
      self.pos = _save
      _tmp = match_string("in")
      break if _tmp
      self.pos = _save
      _tmp = match_string("inline")
      break if _tmp
      self.pos = _save
      _tmp = match_string("instanceof")
      break if _tmp
      self.pos = _save
      _tmp = match_string("interface")
      break if _tmp
      self.pos = _save
      _tmp = match_string("is")
      break if _tmp
      self.pos = _save
      _tmp = match_string("lambda")
      break if _tmp
      self.pos = _save
      _tmp = match_string("module")
      break if _tmp
      self.pos = _save
      _tmp = match_string("native")
      break if _tmp
      self.pos = _save
      _tmp = match_string("new")
      break if _tmp
      self.pos = _save
      _tmp = match_string("next")
      break if _tmp
      self.pos = _save
      _tmp = match_string("nil")
      break if _tmp
      self.pos = _save
      _tmp = match_string("not")
      break if _tmp
      self.pos = _save
      _tmp = match_string("or")
      break if _tmp
      self.pos = _save
      _tmp = match_string("pass")
      break if _tmp
      self.pos = _save
      _tmp = match_string("public")
      break if _tmp
      self.pos = _save
      _tmp = match_string("print")
      break if _tmp
      self.pos = _save
      _tmp = match_string("private")
      break if _tmp
      self.pos = _save
      _tmp = match_string("protected")
      break if _tmp
      self.pos = _save
      _tmp = match_string("public")
      break if _tmp
      self.pos = _save
      _tmp = match_string("raise")
      break if _tmp
      self.pos = _save
      _tmp = match_string("redo")
      break if _tmp
      self.pos = _save
      _tmp = match_string("rescue")
      break if _tmp
      self.pos = _save
      _tmp = match_string("retry")
      break if _tmp
      self.pos = _save
      _tmp = match_string("register")
      break if _tmp
      self.pos = _save
      _tmp = match_string("return")
      break if _tmp
      self.pos = _save
      _tmp = match_string("self")
      break if _tmp
      self.pos = _save
      _tmp = match_string("sizeof")
      break if _tmp
      self.pos = _save
      _tmp = match_string("static")
      break if _tmp
      self.pos = _save
      _tmp = match_string("super")
      break if _tmp
      self.pos = _save
      _tmp = match_string("switch")
      break if _tmp
      self.pos = _save
      _tmp = match_string("synchronized")
      break if _tmp
      self.pos = _save
      _tmp = match_string("then")
      break if _tmp
      self.pos = _save
      _tmp = match_string("this")
      break if _tmp
      self.pos = _save
      _tmp = match_string("throw")
      break if _tmp
      self.pos = _save
      _tmp = match_string("transient")
      break if _tmp
      self.pos = _save
      _tmp = match_string("try")
      break if _tmp
      self.pos = _save
      _tmp = match_string("undef")
      break if _tmp
      self.pos = _save
      _tmp = match_string("union")
      break if _tmp
      self.pos = _save
      _tmp = match_string("unless")
      break if _tmp
      self.pos = _save
      _tmp = match_string("unsigned")
      break if _tmp
      self.pos = _save
      _tmp = match_string("until")
      break if _tmp
      self.pos = _save
      _tmp = match_string("use")
      break if _tmp
      self.pos = _save
      _tmp = match_string("var")
      break if _tmp
      self.pos = _save
      _tmp = match_string("virtual")
      break if _tmp
      self.pos = _save
      _tmp = match_string("volatile")
      break if _tmp
      self.pos = _save
      _tmp = match_string("when")
      break if _tmp
      self.pos = _save
      _tmp = match_string("while")
      break if _tmp
      self.pos = _save
      _tmp = match_string("with")
      break if _tmp
      self.pos = _save
      _tmp = match_string("xor")
      break if _tmp
      self.pos = _save
      _tmp = match_string("yield")
      break if _tmp
      self.pos = _save
      break
    end # end choice

    set_failed_rule :_reserved unless _tmp
    return _tmp
  end

  # tok_int_constant = (< intconstant > { text.to_i } | < hexconstant > { text.to_i } | "false" { 0 } | "true" { 1 })
  def _tok_int_constant

    _save = self.pos
    while true # choice

      _save1 = self.pos
      while true # sequence
        _text_start = self.pos
        _tmp = apply(:_intconstant)
        if _tmp
          text = get_text(_text_start)
        end
        unless _tmp
          self.pos = _save1
          break
        end
        @result = begin;  text.to_i ; end
        _tmp = true
        unless _tmp
          self.pos = _save1
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save

      _save2 = self.pos
      while true # sequence
        _text_start = self.pos
        _tmp = apply(:_hexconstant)
        if _tmp
          text = get_text(_text_start)
        end
        unless _tmp
          self.pos = _save2
          break
        end
        @result = begin;  text.to_i ; end
        _tmp = true
        unless _tmp
          self.pos = _save2
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save

      _save3 = self.pos
      while true # sequence
        _tmp = match_string("false")
        unless _tmp
          self.pos = _save3
          break
        end
        @result = begin;  0 ; end
        _tmp = true
        unless _tmp
          self.pos = _save3
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save

      _save4 = self.pos
      while true # sequence
        _tmp = match_string("true")
        unless _tmp
          self.pos = _save4
          break
        end
        @result = begin;  1 ; end
        _tmp = true
        unless _tmp
          self.pos = _save4
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save
      break
    end # end choice

    set_failed_rule :_tok_int_constant unless _tmp
    return _tmp
  end

  # tok_dub_constant = dubconstant:f { f.to_f }
  def _tok_dub_constant

    _save = self.pos
    while true # sequence
      _tmp = apply(:_dubconstant)
      f = @result
      unless _tmp
        self.pos = _save
        break
      end
      @result = begin;  f.to_f ; end
      _tmp = true
      unless _tmp
        self.pos = _save
      end
      break
    end # end sequence

    set_failed_rule :_tok_dub_constant unless _tmp
    return _tmp
  end

  # tok_identifier = < identifier > {text}
  def _tok_identifier

    _save = self.pos
    while true # sequence
      _text_start = self.pos
      _tmp = apply(:_identifier)
      if _tmp
        text = get_text(_text_start)
      end
      unless _tmp
        self.pos = _save
        break
      end
      @result = begin; text; end
      _tmp = true
      unless _tmp
        self.pos = _save
      end
      break
    end # end sequence

    set_failed_rule :_tok_identifier unless _tmp
    return _tmp
  end

  # tok_st_identifier = st_identifier
  def _tok_st_identifier
    _tmp = apply(:_st_identifier)
    set_failed_rule :_tok_st_identifier unless _tmp
    return _tmp
  end

  # escapes = ("\\r" { "\r" } | "\\n" { "\n" } | "\\t" { "\t" } | "\\\"" { "\"" } | "\\'" { "'" } | "\\\\" { "\\" })
  def _escapes

    _save = self.pos
    while true # choice

      _save1 = self.pos
      while true # sequence
        _tmp = match_string("\\r")
        unless _tmp
          self.pos = _save1
          break
        end
        @result = begin;  "\r" ; end
        _tmp = true
        unless _tmp
          self.pos = _save1
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save

      _save2 = self.pos
      while true # sequence
        _tmp = match_string("\\n")
        unless _tmp
          self.pos = _save2
          break
        end
        @result = begin;  "\n" ; end
        _tmp = true
        unless _tmp
          self.pos = _save2
        end
        break
      end # end sequence

      break if _tmp
      self.pos = _save
